Set mysql sql-mode to avoid failures to to strict mode. Copy most of the threaded screen script into entry.sh. Add settings for debug logging.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,6 @@ nzedb_db:
     MYSQL_USER: 'nZED'
     MYSQL_PASSWORD: 'i8eight8s'
   volumes:
-    - /data/docker_volumes/mysql:/var/lib/mysql
+    - /ssd_persist/mysql:/var/lib/mysql
+    - /ssd_persist/mysql_tmp:/tmp
+    - /home/gwmullin/code/docker/nzedb/mysql_conf.d:/etc/mysql/conf.d
