--- a/nzedb/docker-compose.yml
+++ b/nzedb/docker-compose.yml
@@ -7,6 +7,7 @@ nzedb:
   volumes:
     - /data/docker_volumes/covers:/volumes/covers
     - /data/docker_volumes/nzbfiles:/volumes/nzbfiles
+  restart: always
 
 nzedb_db:
   image: mysql
@@ -15,7 +16,9 @@ nzedb_db:
     MYSQL_DATABASE: 'nzedb'
     MYSQL_USER: 'nZED'
     MYSQL_PASSWORD: 'i8eight8s'
+    TZ: 'America/Los_Angeles'
   volumes:
     - /ssd_persist/mysql:/var/lib/mysql
     - /ssd_persist/mysql_tmp:/tmp
     - /home/gwmullin/code/docker/nzedb/mysql_conf.d:/etc/mysql/conf.d
+  restart: always
