Don't use the sabnzb official image.

--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -1,5 +1,5 @@
 sabnzbd:
-  image: "sabnzbd/sabnzbd"
+  build: .
   container_name: "sabnzbd"
   volumes:
     - "/data/docker_volumes/sabnzbd:/datadir"
