--- a/nzedb/Dockerfile
+++ b/nzedb/Dockerfile
@@ -9,6 +9,7 @@ ENV HOME /root
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
+ENV LOCAL_USER ${NZEDB_USER:-www-data}
 
 RUN \
   sed -i 's/# \(.*multiverse$\)/\1/g' /etc/apt/sources.list && \
