Run nzedb as a given user, modify updater scripts slightly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - /data/docker_volumes/nzbfiles:/volumes/nzbfiles
     environment:
       TZ: "America/Los_Angeles"
+      RUN_CHOWN: "true"
   
   nzedb_db:
     image: mysql
