--- a/vpn/vpn/vpn.conf
+++ b/vpn/vpn/vpn.conf
@@ -1,9 +1,8 @@
 # host/port of vpn server
-remote gw1.iad1.slickvpn.com 443
+remote gw1.sjc1.slickvpn.com 8888
 # file containing username and password
 #auth-user-pass openvpn.userpass
 # ... or prompt for authentication
-#auth-user-pass "10168102.9054zf10"
 auth-user-pass /vpn/vpn.auth
 # equivalent to pull, tls-client
 client
