--- a/vpn/vpn/vpn.conf
+++ b/vpn/vpn/vpn.conf
@@ -1,5 +1,5 @@
 # host/port of vpn server
-remote gw1.sjc1.slickvpn.com 8888
+remote gw1.ams1.slickvpn.com 8888
 # file containing username and password
 #auth-user-pass openvpn.userpass
 # ... or prompt for authentication
