upstream changes broke nzedb build. Update to new shitty compose process.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - /data/docker_volumes/nzbfiles:/volumes/nzbfiles
     environment:
       TZ: "America/Los_Angeles"
-      RUN_CHOWN: "true"
+      RUN_CHOWN: "false"
   
   nzedb_db:
     image: mysql
